# hw-json-simd

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  README.md  hw-json-simd.cabal  package.yaml  project.sh  stack.yaml  talk.md
.circleci/: config.yml
.github/workflows/: haskell.yml
app/: Main.hs
app/App/: Commands.hs  Lens.hs
app/App/Commands/: Capabilities.hs  CreateIndex.hs  Types.hs
cbits/: Makefile  debug.c  debug.h  intrinsics.h  main.c  simd-phi-table-32.c  simd-spliced.c  simd-state-table.c  simd-state.c  simd-transition-table-32.c  simd.c  simd.h  transition-table.c
src/HaskellWorks/Data/Json/: Simd.hs
src/HaskellWorks/Data/Json/Simd/: Capabilities.hs  Foreign.chs  Fsm.hs
src/HaskellWorks/Data/Json/Simd/Fsm/: Core.hs
src/HaskellWorks/Data/Json/Simd/Index/: Simple.hs  Standard.hs
src/HaskellWorks/Data/Json/Simd/Internal/: Foreign.chs  Fsm.hs  List.hs  StateMachine.hs  Word8.hs
src/HaskellWorks/Data/Json/Simd/Internal/Fsm/: Core.hs
src/HaskellWorks/Data/Json/Simd/Internal/Index/: Simple.hs  Standard.hs
src/HaskellWorks/Data/Json/Simd/Internal/StateMachine/: Pretty.hs
test/: Spec.hs
test/HaskellWorks/Data/Json/Simd/Index/: StandardSpec.hs
