cabal-version: 1.12

name:           hw-json-simd
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/haskell-works/hw-json-simd#readme>
homepage:       https://github.com/haskell-works/hw-json-simd#readme
bug-reports:    https://github.com/haskell-works/hw-json-simd/issues
author:         John Ky
maintainer:     newhoggy@gmail.com
copyright:      2018 John Ky
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    cbits/debug.h
    cbits/simd.h
    cbits/simd-spliced.c
    cbits/simd-state.c
    cbits/simd-phi-table-32.c
    cbits/simd-transition-table-32.c
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-json-simd

flag avx2
  description: Enable avx2 instruction set
  manual: False
  default: False

flag bmi2
  description: Enable bmi2 instruction set
  manual: False
  default: False

flag sse42
  description: Enable SSE 4.2 optimisations.
  manual: False
  default: True

library
  exposed-modules:
      HaskellWorks.Data.Json.Simd.Index.Simple
      HaskellWorks.Data.Json.Simd.Index.Standard
      HaskellWorks.Data.Json.Simd.Internal.Foreign
      HaskellWorks.Data.Json.Simd.Internal.Index.Simple
      HaskellWorks.Data.Json.Simd.Internal.Index.Standard
      HaskellWorks.Data.Json.Simd.Internal.List
  other-modules:
      Paths_hw_json_simd
  hs-source-dirs:
      src
  ghc-options: -Wall
  cc-options: -mssse3 -O3 -mlzcnt -mbmi2 -mavx2
  include-dirs:
      cbits
  c-sources:
      cbits/debug.c
      cbits/simd-spliced.c
      cbits/simd-state.c
      cbits/simd-phi-table-32.c
      cbits/simd-transition-table-32.c
  build-tools:
      c2hs
  build-depends:
      base >=4.7 && <5
    , bytestring
    , hw-prim
    , lens
    , vector
  if flag(sse42)
    ghc-options: -msse4.2
    cc-options: -msse4.2
  if flag(bmi2)
    cc-options: -mbmi2 -DBMI2_ENABLED
  if (flag(bmi2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
  if flag(avx2)
    cc-options: -mavx2 -DAVX2_ENABLED
  if (flag(avx2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
    cpp-options: -DBMI2_ENABLED -DAVX2_ENABLED
  if (impl(ghc >=8.0.1))
    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  if (!impl(ghc >=8.0.1))
    build-depends:
        semigroups >=0.8.4 && <0.19
      , transformers >=0.4 && <0.6
  default-language: Haskell2010

executable hw-json-simd
  main-is: Main.hs
  other-modules:
      App.Commands
      App.Commands.CreateIndex
      App.Commands.Types
      App.Lens
      Paths_hw_json_simd
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , hw-json-simd
    , hw-prim
    , lens
    , optparse-applicative
    , vector
  if flag(sse42)
    ghc-options: -msse4.2
    cc-options: -msse4.2
  if flag(bmi2)
    cc-options: -mbmi2 -DBMI2_ENABLED
  if (flag(bmi2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
  if flag(avx2)
    cc-options: -mavx2 -DAVX2_ENABLED
  if (flag(avx2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
    cpp-options: -DBMI2_ENABLED -DAVX2_ENABLED
  if (impl(ghc >=8.0.1))
    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  if (!impl(ghc >=8.0.1))
    build-depends:
        semigroups >=0.8.4 && <0.19
      , transformers >=0.4 && <0.6
  default-language: Haskell2010

test-suite hw-json-simd-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hw_json_simd
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bytestring
    , hw-json-simd
    , hw-prim
    , lens
    , vector
  if flag(sse42)
    ghc-options: -msse4.2
    cc-options: -msse4.2
  if flag(bmi2)
    cc-options: -mbmi2 -DBMI2_ENABLED
  if (flag(bmi2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
  if flag(avx2)
    cc-options: -mavx2 -DAVX2_ENABLED
  if (flag(avx2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
    cpp-options: -DBMI2_ENABLED -DAVX2_ENABLED
  if (impl(ghc >=8.0.1))
    ghc-options: -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  if (!impl(ghc >=8.0.1))
    build-depends:
        semigroups >=0.8.4 && <0.19
      , transformers >=0.4 && <0.6
  default-language: Haskell2010
